--- a/gb/ncid282_10.md
+++ b/gb/ncid282_10.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11422254.md#1" target="_blank">加中关系紧张 渥京被促关注驻华外交官健康</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11422254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/China-sentences-6-foreigners-for-drugs-Canadian-gets-death-150x120.jpg" align ="left"></a>一些前外交官正在敦促加拿大政府，密切监视加拿大驻中国的工作人员是否有脑损伤的迹象，并建立一个检测声音攻击的系统。在加中关系异常紧张的时候，美国外交官伦齐（Mark Lenzi）建议加拿大政府根据自己的经验，密切监视其驻中国的人员是否有类似脑震荡的症状。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 7:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11421991.md#1" target="_blank">FBI发警告后 夏威夷大学关闭孔子学院</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11421991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/4549734021_022ccdba5b_o-150x120.jpg" align ="left"></a>美国夏威夷大学（University of Hawaii）关闭了受中共影响和左右的孔子学院，原因之一是联邦政府出台了新的限制措施，而且美国联邦调查局（FBI）已经发布警告说，美国各大学在遏制知识产权盗窃和间谍活动方面做得不够。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 5:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11420871.md#1" target="_blank">台米饼厂携手馆长 拟推“汉汉仙贝”打旺旺</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11420871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/798c4718c2fa2083d125cc82fc018193-150x120.jpg" align ="left"></a>反红媒集会发起人“馆长”陈之汉7月30日晚间在脸书透露，台湾米饼厂商找他合作，准备推出“汉汉仙贝”来打旺旺仙贝，大家支持吗？引来上万名网友纷纷表示支持，甚至有网友建议出汉汉小馒头，拒买旺旺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 4:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11421334.md#1" target="_blank">震惊荷兰 华人大规模税务欺诈案开庭?</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11421334.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/iStock-1055975760-150x120.jpg" align ="left"></a>震惊荷兰餐饮界的知名寿司连锁店SUMO大规模税务欺诈案日前开庭，四名华裔疑犯参加庭审。主要犯罪嫌疑人、SUMO寿司连锁店的创始人Chi Ho L被判入狱两年，同时，SUMO已与荷兰税务局达成协议，补缴1500万欧元税款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月31日 9:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11419458.md#1" target="_blank">黄晓明改Angelababy昵称 网友大赞恩爱夫妻</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11419458.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/VCG111219316488-150x120.jpeg" align ="left"></a>大陆男星黄晓明和Angelababy结婚四年，育有2岁的儿子“小海绵”。之前一直甜蜜“放闪”的两人，去年以来疑似因变得格外低调，故被频传婚变。近日，黄晓明出席新片首映礼，被问及相关问题时，网民发现他对Angelababy的昵称已从Baby或“媳妇”变成“大Baby”。粉丝听后终于放心，并纷纷大赞两人无疑是恩爱夫妻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月31日 6:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11419022.md#1" target="_blank">港民遭暴力镇压 台立委：自治承诺是骗局</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11419022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/c48f42c3510291f2704dbc6f148f08aa-150x120.jpg" align ="left"></a>中共国务院港澳事务办公室近日罕见召开记者会，回应香港连续8周的“反送中”抗争，并称示威者是暴力犯罪分子。对此，台湾时代力量立委林昶佐30日批评，惯用暴力镇压的中国（中共）政府，竟有脸指责抗暴的人民，“实在令人不耻！”香港连日的血腥镇暴，证明中共对香港自治的承诺完全是场骗局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月31日 1:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11418403.md#1" target="_blank">香港国民党员联合发表“反共连署”声明</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11418403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/84b6d22a4a6c959a4e7e6a02c45479ac-150x120.jpg" align ="left"></a>香港反送中事件越演越烈，港府与北京当局采取越来越强硬的手段，受到全球瞩目。
+香港LIHKG讨论区爆出多位香港的“国民党党员”，联合发表“反共连署”声明，表达“反共绝无妥协，奋斗才能自由”，同时附上党政与香港护照照片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 10:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11416660.md#1" target="_blank">台学界喊话：政府不该用公帑订红色媒体</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11416660.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/5247a19f65e082eb4044114982765c63-150x120.jpg" align ="left"></a>金融时报近日点名《中国时报》接受“中共国台办指示”，台教会29日召开记者会，呼吁台湾政府勿以公帑订红媒。台教会会长赖振昌表示，中共透过大量资金购买台湾媒体，绝非新闻自由可以带过，呼吁台湾政府在要求盘点危险地区的产品清单之际，也要清查各单位是否有以公帑订阅红媒报纸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 2:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11416996.md#1" target="_blank">涨数十倍 大陆常用药“火箭式”涨价</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11416996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1310080445531459-150x120.jpg" align ="left"></a>家庭常备的心血管病“救命药”硝酸甘油片，在大陆奇缺，出厂价9元（人民币，下同）多，竟卖到了150元；治疗胃肠解痉及胃动力的针剂阿托品注射液，从1.8元涨至58元；小瓶复合维生素B从1.5元/瓶涨至10.5元/瓶……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 12:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407064.md#1" target="_blank">沉寂千年的地下军团：秦始皇陵之谜（上）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/bingmayong-150x120.jpg" align ="left"></a>提起秦始皇，总是和无数的“第一”及“唯一”联系起来，他是名符其实的“始皇帝”，是本次人类中华史上第一位皇帝，也是地球上唯一大帝国的皇帝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 10:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/28/n11414991.md#1" target="_blank">河南建校舍遇假水泥 官员对镜头打“哑语”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/28/n11414991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/29e4-iakuryw6063778-150x120.jpg" align ="left"></a>河南省鹿邑县一所农村学校，修建宿舍时买到了25吨问题水泥，“凝固”的水泥块，单手就能捏碎。水泥生产厂家所在地的山东枣庄一位市场监督官员面对媒体镜头“只张嘴不出声”……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 12:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/28/n11413896.md#1" target="_blank">女游客华山频遇害 网民传捞尸队杀人谋财被抓</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/28/n11413896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/11/1511111316001695-150x120.jpg" align ="left"></a>多次传出惨案的华山景区再有独身女游客被杀，网民发文指当地捞尸队为收费而谋杀单身旅客，但迅速遭跨省抓捕；有人批评华山景区及官方漠视游客的安全，但就动辄使用公权力打压言论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月28日 10:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/27/n11413684.md#1" target="_blank">女博士疑骗硕导5篇SCI及房车 复旦调查</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/27/n11413684.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/44d65f2110b194fc06dcaa3beb848881-150x120.jpeg" align ="left"></a>复旦大学上海医学院，7月27日凌晨发微博称，该院已经开始调查该院一女博士生与附属中山医院青年研究员之间的情感纠葛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月28日 5:31 AM							</td></tr>
@@ -10,24 +21,14 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/26/n11411485.md#1" target="_blank">大陆蹭凉族进军宜家 躺倒一片 姿势尴尬</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/26/n11411485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/q1-150x120.jpg" align ="left"></a>看到下面的场景，如果不是那些标签，你很可能以为是旅馆。但这却是中国多地的宜家商场内的夏日独特“景观”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 1:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/26/n11411345.md#1" target="_blank">四川石马镇官员开会中突发爆炸 20伤</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/26/n11411345.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/76b6c2b1gy1g5dhj044d3j20m80gojt5-150x120.jpg" align ="left"></a>7月26日11时50分左右，四川绵阳游仙区石马镇一小区一楼发生爆炸，导致正在一楼开会的多名党员干部受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 10:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407560.md#1" target="_blank">山东省驻村官员成村霸 强拆鱼塘断村民生路</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407560.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/2-44-150x120.jpg" align ="left"></a>2019年6月，山东临沂仲山前村村民王学礼，因未给村书记张锦光送上大鱼遭到报复，水库里的水全被抽干，四五万斤鱼全部死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 5:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407268.md#1" target="_blank">晒老年妆邓超与儿女合照 孙俪感慨湿润了眼眶</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/b8bc3c132728dbb502ffadddc6350c34-150x120.jpg" align ="left"></a>大陆女星孙俪和邓超结婚七年，育有一对儿女“等等”和“小花”，一家四口幸福满溢。时常分享生活趣事的孙俪，23日在微博分享老年妆的邓超和一对儿女的合照，并感慨，看到父子两人的旧照与如今的对比照，“湿润了我的眼眶”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 6:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407807.md#1" target="_blank">纽约华女隐瞒被抓经历 政庇上庭难圆其说</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/f310cf63d6019f356d2fdcb5009dc6b6-150x120.jpg" align ="left"></a>通过偷渡入境的一名40多岁华妇政庇面谈失败后，日前在纽约联邦大楼上移民法庭，在开庭后，法官对被告的基本信息进行核查，询问她曾经在哪些地方居住过，但该华妇提交的资料及回答，与法官所调查的事实有重大出入，被法官质疑其诚信度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 1:05 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407761.md#1" target="_blank">庇护申请“漏写”堕胎 纽约华女被拒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11407761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/c0e1615d3a73528550e273942506cf74-150x120.jpg" align ="left"></a>政治庇护案件有许多人面谈失败，是因为编造故事前后不一致。纽约一名申请政治庇护失败而上诉的华人，却因为其申请书和证词一看就让人生疑，被纽约联邦第二巡回上诉法院法官指其“轻率敷衍”（frivolous application）、“故意造假”（deliberately fabricated），于17日直接裁决其败诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月25日 11:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11408769.md#1" target="_blank">23家网媒遭红色势力渗透 台调查局查办</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11408769.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1906230946352384-600x400-150x120.jpg" align ="left"></a>中共国台办旗下的“中国台湾网”日前发文批评台湾政府，台湾有23家网路媒体刊登与国台办网站相同标题、内容的文章，遭质疑是红色势力渗透。法务部调查局25日表示，持续深入了解中，若发现不法，马上立案侦办。陆委会表示，调查关键在于双方“合意、分工”情形的掌握，陆委会将积极搜集证据，协助检方完整侦办此案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月25日 10:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407035.md#1" target="_blank">帝吧小粉红个资突遭起底 未能远征香港解散</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407035.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907071013091528-150x120.jpg" align ="left"></a>大陆“帝吧”小粉红网军24日清晨宣布解散“集团军粉丝团”，原因是他们的成员纷纷被“高技术人员”起底，包括个人电话、出生日期、身份证号等个资，也未能在23日晚发动事先大肆张扬的攻击香港连登网站的行动，成网络笑柄。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月25日 5:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407028.md#1" target="_blank">湖南县医院一科主任 卖一千万药收百万回扣</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11407028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/140204235716685-600x400-150x120.jpg" align ="left"></a>医院采购药品、医疗器械要收回扣，该顽瘴痼疾在大陆医院内部大行其道。近日，湖南郴州一县人民医院一科室主任“卖一千万药品收近百万回扣”被曝光。有业界人士认为，这是中共医疗产业化体制造成的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月25日 4:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11406268.md#1" target="_blank">法媒调查报告：中共如何花费巨资渗透西方</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11406268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-653166162-150x120.jpg" align ="left"></a>法国《自由报》（Liberation）7月初发表一篇调查报告，首次披露西方媒体已受到了中共的渗透。报告分析了中共如何巨资投入，在西方媒体中作宣传，以保持北京当局在国际上的大好形象。该报记者还前往新华社驻巴黎办公室试探究竟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月24日 9:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/23/n11404448.md#1" target="_blank">英澳选手先后拒绝与孙杨同台合影 前后始末</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/23/n11404448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/Unknown-7-150x120.jpg" align ="left"></a>澳洲游泳健将拒绝与中国选手孙杨同台合影话题发酵之际。23日的200米自由泳项目颁奖典礼上，获得铜牌的英国选手斯科特-邓肯重演了霍顿的行为，拒绝与获得金牌的孙杨握手、合影。孙杨则在领奖台上对着邓肯怒吼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月23日 11:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11402378.md#1" target="_blank">梁朝伟接演漫威新片挨骂 刘嘉玲劝陆网民冷静</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11402378.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/VCG31439978403_meitu_1-150x120.jpg" align ="left"></a>与梁朝伟（伟仔）迎来结婚11周年纪念日的刘嘉玲，21日在微博力挺丈夫出演漫威首部华人英雄电影《上气》，并写下：“期待。”不料引来大陆网民炮轰梁饰演大反派“满大人”涉嫌“辱华”。对此，刘嘉玲贴出照片，劝大陆网民保持冷静。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月23日 9:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11402689.md#1" target="_blank">大陆多地高温破40℃ “桑拿天”中迎大暑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11402689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/VCG111159347595-600x400-150x120.jpg" align ="left"></a>在大陆多地持续的高温天气中，“大暑” 节气今天（23日）正式登场。专家表示，目前正在笼罩中东部多地的高温，范围大、时间长，或将持续至8月上旬。此外，在未来几日，西南、东北、华北多地将受到暴雨侵袭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月23日 6:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/21/n11399943.md#1" target="_blank">刘欣批没帮其取行李的人“丑陋” 引争议</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/21/n11399943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/liuxin-150x120.jpg" align ="left"></a>中共大外宣的中国国际电视台（CGTN）的女主播刘欣，近日发微博抱怨不帮她取行李箱的人“是丑陋的”，引发争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 2:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/21/n11399944.md#1" target="_blank">北京局地超40℃ 未来一周闷热持续</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/21/n11399944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1152058251-150x120.jpg" align ="left"></a>今天(21日)14时，北京大部地区气温都超过了35℃，其中古观象台达到了40.8℃。因大部地区出现零星降雨，提升了空气湿度，民众更感到闷热难耐。预计未来一周闷热持续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月21日 11:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/31/n11421197.md#1" target="_blank">文革毁灭中华文化 台湾维护保存传统</a><br></h3>民团“我爱国旗委员会”31日举行记者会，宣布将于8月3日到18日举办“中华文化之灭绝与复兴展览”。活动主办人宋绪康表示，中国大陆在历经文革后，中华文化几乎被破坏殆尽，不仅古迹被拆光，连简体字都与中国几千年文字毫无关系，好在台湾各界人士积极抢救，才让中华文化得已延续并发扬光大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 3:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/1/n11421743.md#1" target="_blank">中经院：美中冲突或持续20年</a><br></h3>美中代表31日在上海重启贸易谈判，双方官员都未对此发表言论，外界雾里看花。台湾的中华经济研究院31日举行“美中经济对抗之影响与因应”研讨会，中经院院长陈思宽说，贸易战是否就此结束，多数人并不乐观看待，现在一般人士认为，美中间的贸易冲突可能是长达10、20年的持久战，过程中台湾不能掉以轻心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 1:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/28/n11415267.md#1" target="_blank">从美偷运34名中国人进加拿大 华男认罪?</a><br></h3>一名卑诗省华裔男子被控从美国偷运34名中国人进入加拿大。这名男子在第一次法庭聆讯中，几乎承认了所有的控罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月31日 3:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11418537.md#1" target="_blank">用易燃化学品去污 南通四人洗衣时遭雷击</a><br></h3>近日，江苏省南通市一家服装厂的老板夫妇和两名工人在空地上洗衣时，突降雷暴雨。谁知，四人全遭雷击，全身大面积烧伤。据悉，因衣服上油污较重，伤者当时使用了一种叫做“枪水”的易燃易爆化学品去除污渍。目前，伤者的生命体征平稳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 4:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/30/n11417960.md#1" target="_blank">每日三退声明精选（2019/07/29）</a><br></h3>本人在亿丰汽车城买房子，被黑社会性质的公司骗了，同时很多人被骗，政府不作为，官黑勾结，为我们说话的好记者竟然被公安给抓了，这是什么世道！我们到处求告无门，政府腐败透顶。从这件事看清中共黑社会、恐怖治国的手段，退出曾经被骗加入的共青团、少先队。不做邪恶政权的接班人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 11:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11416804.md#1" target="_blank">美智库学者：公民力量永续 独裁者恐惧</a><br></h3>美国华府智库学者奥塔威（Marina Ottaway）发表评论文章，他指出，受压迫的公民社会在短期内无法胜过暴力的独裁政府，但长期来看，坚持不懈是公民社会的终极武器，也是让独裁政权惧怕的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 3:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/29/n11415712.md#1" target="_blank">每日三退声明精选（2019/07/28）</a><br></h3>大学时期，被迫入党，1.入党申请书并非本人撰写，是由班级支书在本人不知情的情况下撰写并提交。2.入党宣读时本人为醉酒状态并没有完成宣读过程便中途离场。3.即便是1和2两种情况下还是被入了党。之后了解到该党对我华夏民族的摧残，对中国共产党已经达到厌恶至极的程度，在退党无法的情况，今日特此在这里发表声明，以表退出恶党之态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/27/n11412484.md#1" target="_blank">每日三退声明精选（2019/07/26）</a><br></h3>我是一名退休机关干部，很高兴在外出考察专案过程中，听到三退保平安的事，中共邪党就应了老百姓的话了“见过骗子，但是没见过象中共邪党这样的骗子，见过耍流氓的，没见过中共邪党这样耍流氓的”，眼下香港也乱了，哪里有它，哪里就出事，中共邪党就是流氓就是恶棍，眼下中共邪党就是世界第一贪腐邪党，我听说瑞士银行要对存在那里的中共邪党贪污官员财产曝光，中共邪党的外交部竟然指责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 11:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/26/n11410074.md#1" target="_blank">每日三退声明精选（2019/07/25）</a><br></h3>前几天从网上下载了VPN，打算翻墙到Youtube看有关最近香港游行的新闻，没想到我无意中还看到了一些有关六四事件的视频，好奇心驱使之下我点进去看了。后来我又一口气看完了很多有关中共的纪录片，以及《九评共产党》的文章。看完之后，我从小到大所坚信的知识都被彻底颠覆了。今天，我终于下定决心，特此与中共划清界限，声明退出共青团！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 11:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/25/n11408223.md#1" target="_blank">连说半小时对不起 2岁男童对被杀的鱼道歉</a><br></h3>近日，甘肃白银市民李女士买了一条鱼准备给孩子加餐。她2岁的儿子看到被杀掉的鱼后，一直对着鱼埋头忏悔，连说半小时对不起，还试图给鱼喂水、贴面膜。李女士将视频发到网上，许多网民表示，孩子真是太善良了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月25日 4:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/24/n11405499.md#1" target="_blank">每日三退声明精选（2019/07/23）</a><br></h3>很多人在学校时候受过洗脑，甚至入党都是内部推荐，引以为“荣”，后来步入社会，学会独立思考。越来越觉得以前受之迷惑，但是我相信很多党员都是无辜的，大部分做坏事的都是体制内的人，像我们这些体制外的党员大部分并不坏，更没有做过坏事，甚至很多心存善念，希望迎来民主。也希望你们能为民主事业做更多贡献，早日搞走黑暗和魔鬼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月24日 11:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11401630.md#1" target="_blank">用方便面修家具？山东90后小伙火了</a><br></h3>随处可见的方便面、饼干、蛋壳甚至是牙膏可以被用来修家具？近日，山东青岛90后小伙汪伟火了。因其神奇的修复技能和完美如初的修复效果，汪伟迅速走红网络。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/22/n11400873.md#1" target="_blank">每日三退声明精选（2019/07/21）</a><br></h3>中共现在把中国搞的乌烟瘴气，贪官遍地，空气污染严重，水质恶化严重，豆腐渣工程，黑心地沟油，毒奶粉，假预苗，有毒食品泛滥，P2P爆雷，现在好多银行都倒闭关门了，中共却还在欺骗我们，中共干的坏事实在是太多太多，把全中国搞的生灵涂炭。我声明退出中共少先队及一切邪恶组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 11:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/7/21/n11398575.md#1" target="_blank">每日三退声明精选（2019/07/20）</a><br></h3>中共是中国人的敌人，是中国灾难的制造者，没有中共，中国人才有幸福生活！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月21日 10:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid282_10.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid282_10.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid282_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_10.htm">http://www.epochtimes.com/gb/ncid282_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
